<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip">


    <!-- Rightend Arrow -->
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/right_arrow" />
    <!-- Shop Name-->
    <TextView
        android:id="@+id/tvShopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dip"
        android:paddingBottom="10dip"
        android:text="@string/shopName"
        android:textColor="#040404"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="sans" />
    <!-- Address-->
    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvShopName"
        android:layout_below="@+id/tvShopName"
        android:layout_centerHorizontal="true"
        android:paddingTop="0dip"
        android:text="@string/shopAddress"
        android:textColor="#777777"
        android:textSize="15sp" />

    <!-- <ImageView
         android:id="@+id/imgmap"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_toLeftOf="@+id/imageView1"
         android:layout_alignTop="@+id/tvShopName"
         android:contentDescription="@string/app_name"
          android:src="@drawable/imgmap" />
          
           -->

</RelativeLayout>  