<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:layout_centerHorizontal="true"
    android:textAppearance="?android:attr/textAppearanceMedium"
    tools:context=".Login">
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/logo"
        android:layout_above="@+id/txtUsername"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:imeOptions="flagNavigateNext"
        android:maxLines="1"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"></EditText>
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/txtUsername"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_alignStart="@+id/txtUsername" />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnLogin_click"
        android:text="@string/login"
        android:ems="10"
        android:layout_below="@+id/txtPassword"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword" />

</RelativeLayout>
