<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="40dp"
        android:text="@string/width"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:text="@string/height"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="35dp"
        android:text="@string/type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView02"
        android:layout_alignLeft="@+id/txtWidth"
        android:width="100dp"
        android:ems="10"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spnrType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtHeight"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/btnMeasurementOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spnrType"
        android:layout_below="@+id/spnrType"
        android:onClick="btnSave_click"
        android:text="@string/save" />

    <EditText
        android:id="@+id/txtWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/TextView01"
        android:width="100dp"
        android:ems="10"
        android:inputType="number">

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/spnrUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtWidth"
        android:layout_toRightOf="@+id/txtHeight" />

</RelativeLayout>
