<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backg"
    tools:context=".Login">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:paddingBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:imeOptions="flagNavigateNext"
        android:maxLines="1"
        android:textAlignment="center"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"></EditText>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_below="@+id/txtUsername"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnLogin_click"
        android:layout_marginTop="22dp"
        android:text="@string/login"
        android:layout_below="@+id/txtPassword"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_alignEnd="@+id/txtPassword"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_alignEnd="@+id/btnLogin" />
    <requestFocus
        android:layout_alignBottom="@+id/txtUsername"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_alignEnd="@+id/btnLogin" />



</RelativeLayout>